...
                
                if case .loading = viewModel.state {
                    LoadingView()
                }
            }
        }
        .navigationTitle("Favourites")
        .toolbar(content: {
            ToolbarItem(placement: .topBarLeading) {
                Button {
                    router.navigate(to: .favourite)
                } label: {
                    Image(systemName: "text.insert")
...
        .buttonStyle(.plain)
    }
    
    private var noFavourites: some View {
        VStack(alignment: .center) {
            Spacer()
            Text("No favourites yet.")
                .font(.headline)
                .foregroundStyle(Color(uiColor: .navigationColor))
                .dynamicTypeAccessibility()
                .padding()
            Spacer()
        }
...
