//
//  UpgradeView.swift
//  APOD-iOS
//
//  Created by Ankita Kotadiya on 05/12/24.
//

import SwiftUI

struct UpgradeView: View {
    var body: some View {
        Text("Upgrades")
    }
}

//#Preview {
//    UpgradeView()
//}
