...
        
        await apodDataRepo.updateElement(for: apod)
    }
    
    func loadData() {
        Task {
            if ProcessInfo.processInfo.environment["ui_test_media"] == "video" {
                selectedDate = dateFormatting.dateFromString(Constants.Dates.videoDate, dateStyle: .short)
            }
            await load(strDate: dateFormatting.stringFromDate(date: selectedDate, dateStyle: .short))
        }
    }
    
...
